syntax = "proto3";

package userpb;

option go_package = "./";


service UserService {
    rpc EditUser(SignupRequest) returns (CommonResponse);
    rpc FindAllUsers(UNoParam) returns (Users);
    rpc DeleteUser(UserID) returns (CommonResponse);
    rpc FindUserByID(UserID) returns (Profile);
    rpc FindUserByEmail(Email) returns (Profile);

}

message FetchAll{}

message SignupRequest {
    string firstname = 1;
    string lastname = 2;
    string dob = 3;
    string gender = 4;
    string email = 5;
    string phone = 6;
    string address = 7;
    string password = 8;
}

message Profile {
    string firstname = 1;
    string lastname = 2;
    string username = 3;
    string dob = 4;
    string gender = 5;
    string email = 6;
    string phone = 7;
} 

message Users {
    repeated Profile userlist = 1;
}

message CommonResponse {
    string status = 1;
    string error = 2;
    string message = 3;
}

message Email {
    string email = 1;
}

message UserID {
    uint32 id = 1;
}

message UNoParam{}